2009-09-04  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/cms/cms.py:
	Pytis CMS: Allow codebook insert in menu module selection..

2009-09-04  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/cms/web.py:
	Pytis CMS: Fix menu construction in the default implementation..

2009-09-04  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/cms/cms.py:
	Pytis CMS: Set default `uid' value for the default implementation of CMS Users module..

2009-09-03  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/form/application.py:
	Fix DB connection display in application window title when using local DB connections..

2009-09-03  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/form/application.py:
	Work around changed wx release number constant in *some* wx 2.8 versions..

2009-09-02  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/web/form.py:
	Web: Remember the last selected BrowseForm filter using a cookie..

2009-09-02  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/data/dbapi.py:
	Catch connection error in _postgresql_rollback_transaction of dbapi.

2009-08-31  Tomas Cerha  <cerha@brailcom.org>

	* TODO:
	* lib/pytis/form/dialog.py:
	Fix exit dialog column sizing in wx 2.8..

2009-08-31  Tomas Cerha  <cerha@brailcom.org>

	* TODO:
	* lib/pytis/form/form.py:
	Avoid unnecessary frame title manipulation to prevent wx 2.8 problem in codebook insert..

2009-08-31  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/form/_grid.py:
	Fix grid bool value display in wx 2.8..

2009-08-31  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/form/inputfield.py:
	Preserve text selection when incrementing/decrementing field value..

2009-08-31  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/form/inputfield.py:
	Added `spinning' ability to time fields..

2009-08-31  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/form/commands_.py:
	* lib/pytis/form/inputfield.py:
	Allow incrementing/decrementing field value through a keyboard shortcut (for numeric and date fields).
