@@ -1,3 +1,9 @@
+2009-09-07  Tomas Cerha  <cerha@brailcom.org>
+
+	* lib/pytis/web/form.py:
+	* resources/scripts/pytis.js:
+	AJAX response generation moved from Wiking adding support for runtime filters and few fixes..
+
 2009-09-04  Tomas Cerha  <cerha@brailcom.org>
 
 	* lib/pytis/cms/cms.py:
